--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
   </licenses>
 
   <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.version>2.11.5</scala.version>
+    <scala.version>2.11.8</scala.version>
     <scala.compat.version>2.11</scala.compat.version>
   </properties>
 
@@ -53,10 +53,10 @@
         <artifactId>specs2-junit_${scala.compat.version}</artifactId>
         <version>2.4.16</version>
         <scope>test</scope>
-    </dependency>
+    </dependency> 
     <dependency>
   		<groupId>org.scalanlp</groupId>
-  		<artifactId>breeze_2.10</artifactId> <!-- or 2.11 -->
+  		<artifactId>breeze_2.11</artifactId>
   		<version>0.12</version>
 	</dependency>
 	<dependency>
@@ -101,7 +101,7 @@
           <useFile>false</useFile>
           <disableXmlReport>true</disableXmlReport>
           <!-- If you have classpath issue like NoDefClassError,... -->
-          <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
+          <!--<useManifestOnlyJar>false</useManifestOnlyJar>-->
           <includes>
             <include>**/*Test.*</include>
             <include>**/*Suite.*</include>
